ColinFay published a site update

--- a/index.html
+++ b/index.html
@@ -911,7 +911,7 @@
   
   <span class="middot-divider"></span>
   <span class="article-reading-time">
-    1 min read
+    2 min read
   </span>
   
 
@@ -940,12 +940,12 @@
   
 
   <h3 class="article-title mb-1 mt-3">
-    <a href="/post/golem-hacktoberfest-2021/">Join HacktoberFest 2021 with {golem}!</a>
+    <a href="/post/golem-hacktoberfest-2021/">Join HacktoberFest 2021 with {golem} (and more)!</a>
   </h3>
 
   
   <div class="article-style">
-    <p>Take part to Hacktoberfest 2021 with {golem}</p>
+    <p>Take part to Hacktoberfest 2021 with {golem}, or with other packages from ThinkR.</p>
   </div>
   
 
@@ -1144,12 +1144,12 @@
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/post/golem-hacktoberfest-2021/" >Join HacktoberFest 2021 with {golem}!</a>
+      <a href="/post/golem-hacktoberfest-2021/" >Join HacktoberFest 2021 with {golem} (and more)!</a>
     </h3>
 
     
     <div class="article-style">
-      Take part to Hacktoberfest 2021 with {golem}
+      Take part to Hacktoberfest 2021 with {golem}, or with other packages from ThinkR.
     </div>
     
 
@@ -1193,7 +1193,7 @@
   
   <span class="middot-divider"></span>
   <span class="article-reading-time">
-    1 min read
+    2 min read
   </span>
   
 
